# skyvortex_contact

./: .gitignore  uav_contact_ros_refactor_spec.md
catkin_ws/src/uav_contact_bringup/: CMakeLists.txt  package.xml
catkin_ws/src/uav_contact_bringup/config/: contact_controller.yaml  experiment.yaml  experiment_data_recorder.yaml  kinematics.yaml  laser_distance_relay.yaml  rc.yaml  safety.yaml  servo.yaml  task_manager.yaml  topics.yaml  trajectory.yaml  uav_motion_controller.yaml
catkin_ws/src/uav_contact_bringup/launch/: experiment.launch  semi_auto.launch
catkin_ws/src/uav_contact_bringup/scripts/: run_experiment.sh
catkin_ws/src/uav_contact_core/: CMakeLists.txt  package.xml
catkin_ws/src/uav_contact_core/data/: exp_path.csv  exp_path.csv.bak
catkin_ws/src/uav_contact_core/include/uav_contact_core/control/: uav_motion_controller_node.hpp
catkin_ws/src/uav_contact_core/legacy/: migration_map.md
catkin_ws/src/uav_contact_core/legacy/reference_snapshot/: joint_mapping.py  range_pid_controller.py  rc_to_dynamixel_speed.py  rc_velocity_controller.py
catkin_ws/src/uav_contact_core/scripts/actuation/: dynamixel_control.py  joint_servo_bridge.py  joint_servo_gazebo_relay.py
catkin_ws/src/uav_contact_core/scripts/contact/: dist_pid_controller.py  experiment_data_recorder_node.py  laser_distance_relay.py
catkin_ws/src/uav_contact_core/scripts/control/: dist_pid_controller.py  experiment_data_recorder_node.py
catkin_ws/src/uav_contact_core/scripts/end_effector/: end_effector_client.py  end_effector_kinematics_node.py
catkin_ws/src/uav_contact_core/scripts/kinematics/: end_effector_kinematics_node.py
catkin_ws/src/uav_contact_core/scripts/safety/: safety_monitor_node.py
catkin_ws/src/uav_contact_core/scripts/task/: task_manager_node.py
catkin_ws/src/uav_contact_core/scripts/trajectory/: trajectory_server_node.py
catkin_ws/src/uav_contact_core/scripts/utils/: rc_manager_node.py  rc_to_dynamixel_speed.py
catkin_ws/src/uav_contact_core/src/control/: uav_motion_controller_node.cpp
catkin_ws/src/uav_contact_core/tests/: final_merge_blocker_fix_evidence.txt  task10_test_evidence.txt  task11_test_evidence.txt  task4_test_evidence.txt  task5_test_evidence.txt  task6_test_evidence.txt  task7_test_evidence.txt  task8_test_evidence.txt  task9_test_evidence.txt  test_dist_pid_controller.py  test_e2e_checklist.md  test_end_effector_kinematics.py  test_joint_servo_bridge.py  test_motion_controller_logic.py  test_rc_manager.py  test_safety_monitor.py  test_task_manager.py  test_trajectory_server.py
catkin_ws/src/uav_contact_core/tests/scripts/: run_e2e_smoke.sh
catkin_ws/src/uav_contact_msgs/: CMakeLists.txt  package.xml
catkin_ws/src/uav_contact_msgs/msg/: ContactCommand.msg  EndEffectorState.msg  SafetyState.msg  TaskPhase.msg  TrajectoryPoint.msg
docs/superpowers/plans/: 2026-05-02-uav-contact-ros-refactor-base-v1.md
docs/superpowers/specs/: 2026-05-02-uav-contact-ros-refactor-design.md
reference_code/: controller.cpp  controller.hpp  end_effector_client.py  traj_publisher.py
tests/smoke/: exp_path.csv  task1_workspace_layout_evidence.txt  test_legacy_map.sh  test_workspace_layout.sh
